force-app/main/default/objects/Access_Customer_Variety_Highlights__c/Access_Customer_Variety_Highlights__c.object-meta.xml
<CustomObject>
    <description>This will allow the commercial team to set Variety Highlights per Variety per Account. 3-5 Highlights, 3 Bullets.</description>
    <label>Access Customer Variety Highlights</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Access Customer Variety Highlights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Customer Variety Highlights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>