force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Customer Variety Highlights</relationshipLabel>
    <relationshipName>Access_Customer_Variety_Highlights</relationshipName>
    <type>Lookup</type>
</CustomField>