force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Bullet_1__c.field-meta.xml
<CustomField>
    <fullName>Bullet_1__c</fullName>
    <inlineHelpText>Bullets will appear on the Product Cards within GDM Access. These Bullets should reflect their correlated Highlight 1, 2, 3. If there are 5 Highlights for a Variety, the last 2 will not appear as Bullets.</inlineHelpText>
    <label>Bullet 1</label>
    <type>TextArea</type>
</CustomField>