force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Bullet_2__c.field-meta.xml
<CustomField>
    <fullName>Bullet_2__c</fullName>
    <label>Bullet 2</label>
    <type>TextArea</type>
</CustomField>