force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Bullet_3__c.field-meta.xml
<CustomField>
    <fullName>Bullet_3__c</fullName>
    <label>Bullet 3</label>
    <type>TextArea</type>
</CustomField>