force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Highlight_1__c.field-meta.xml
<CustomField>
    <fullName>Highlight_1__c</fullName>
    <inlineHelpText>Highlights will appear within the Product Data Page in GDM Access. Need to have a minimum of 3 and a maximum of 5.</inlineHelpText>
    <label>Highlight 1</label>
    <type>TextArea</type>
</CustomField>