force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Highlight_2__c.field-meta.xml
<CustomField>
    <fullName>Highlight_2__c</fullName>
    <label>Highlight 2</label>
    <type>TextArea</type>
</CustomField>