force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Highlight_3__c.field-meta.xml
<CustomField>
    <fullName>Highlight_3__c</fullName>
    <label>Highlight 3</label>
    <type>TextArea</type>
</CustomField>