force-app/main/default/objects/Access_Customer_Variety_Highlights__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Access Customer Variety Highlights</relationshipLabel>
    <relationshipName>Access_Customer_Variety_Highlights</relationshipName>
    <type>Lookup</type>
</CustomField>