force-app/main/default/objects/Access_Customer_Variety_Highlights__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bullet_1__c</columns>
    <columns>Bullet_2__c</columns>
    <columns>Bullet_3__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Variety__c</columns>
    <columns>Highlight_1__c</columns>
    <columns>Highlight_2__c</columns>
    <columns>Highlight_3__c</columns>
    <columns>Highlight_4__c</columns>
    <columns>Highlight_5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>